--- a/accounts-service/src/main/resources/application.yml
+++ b/accounts-service/src/main/resources/application.yml
@@ -1,11 +1,7 @@
 spring:
   application.name: accounts-service
   kafka:
-    bootstrap-servers: inviting-camel-5620-eu1-kafka.upstash.io:9092
-    properties:
-      security.protocol: SASL_SSL
-      sasl.mechanism: SCRAM-SHA-256
-      sasl.jaas.config: org.apache.kafka.common.security.scram.ScramLoginModule required username="${KAFKA_USER}" password="${KAFKA_PASS}";
+    bootstrap-servers: redpanda-0:9092
     consumer:
       key-deserializer: org.apache.kafka.common.serialization.LongDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
@@ -28,3 +24,5 @@ logging:
 #logging.level.org.springframework.transaction=trace
 #logging.level.org.springframework.kafka.transaction=debug
 #logging.level.org.springframework.jdbc=debug
+server:
+  port : 8082
