no transaccion service

--- a/no-transactions-service/Dockerfile
+++ b/no-transactions-service/Dockerfile
@@ -3,4 +3,4 @@ RUN mkdir -p /usr/src/myapp
 COPY /target/*.jar /usr/src/myapp
 WORKDIR /usr/src/myapp
 ENV JAVA_TOOL_OPTIONS=-Xmx3489m
-CMD ["java", "-jar","accounts-service-1.0-SNAPSHOT.jar"]
+CMD ["java", "-jar","no-transactions-service-1.0-SNAPSHOT.jar"]
