--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,86 +1,131 @@
-version: "3.7"
-name: redpanda-quickstart
+version: '3'
 networks:
   redpanda_network:
     driver: bridge
 volumes:
-  redpanda-0: null
+  redpanda: null
 services:
-  redpanda-0:
+  redpanda:
+    image: docker.redpanda.com/redpandadata/redpanda:v23.2.9
     command:
-      - redpanda
-      - start
+      - redpanda start
+      - --smp 1
+      - --overprovisioned
       - --kafka-addr internal://0.0.0.0:9092,external://0.0.0.0:19092
       # Address the broker advertises to clients that connect to the Kafka API.
-      # Use the internal addresses to connect to the Redpanda brokers'
+      # Use the internal addresses to connect to the Redpanda brokers
       # from inside the same Docker network.
-      # Use the external addresses to connect to the Redpanda brokers'
+      # Use the external addresses to connect to the Redpanda brokers
       # from outside the Docker network.
-      - --advertise-kafka-addr internal://redpanda-0:9092,external://localhost:19092
+      - --advertise-kafka-addr internal://redpanda:9092,external://localhost:19092
       - --pandaproxy-addr internal://0.0.0.0:8082,external://0.0.0.0:18082
       # Address the broker advertises to clients that connect to the HTTP Proxy.
-      - --advertise-pandaproxy-addr internal://redpanda-0:8082,external://localhost:18082
+      - --advertise-pandaproxy-addr internal://redpanda:8082,external://localhost:18082
       - --schema-registry-addr internal://0.0.0.0:8081,external://0.0.0.0:18081
-      # Redpanda brokers use the RPC API to communicate with eachother internally.
-      - --rpc-addr redpanda-0:33145
-      - --advertise-rpc-addr redpanda-0:33145
-      # Tells Seastar (the framework Redpanda uses under the hood) to use 1 core on the system.
-      - --smp 1
-      # The amount of memory to make available to Redpanda.
-      - --memory 1G
-      # Mode dev-container uses well-known configuration properties for development in containers.
-      - --mode dev-container
-      # enable logs for debugging.
-      - --default-log-level=debug
-    image: docker.redpanda.com/redpandadata/redpanda:v23.2.9
-    container_name: redpanda-0
-    volumes:
-      - redpanda-0:/var/lib/redpanda/data
-    networks:
-      - redpanda_network
+      # Redpanda brokers use the RPC API to communicate with each other internally.
+      - --rpc-addr redpanda:33145
+      - --advertise-rpc-addr redpanda:33145
     ports:
       - 18081:18081
       - 18082:18082
       - 19092:19092
       - 19644:9644
-  console:
-    container_name: redpanda-console
-    image: docker.redpanda.com/redpandadata/console:v2.3.1
+    volumes:
+      - redpanda:/var/lib/redpanda/data
     networks:
       - redpanda_network
+    healthcheck:
+      test: ["CMD-SHELL", "rpk cluster health | grep -E 'Healthy:.+true' || exit 1"]
+      interval: 15s
+      timeout: 3s
+      retries: 5
+      start_period: 5s
+  console:
+    image: docker.redpanda.com/redpandadata/console:v2.3.1
     entrypoint: /bin/sh
-    command: -c 'echo "$$CONSOLE_CONFIG_FILE" > /tmp/config.yml; /app/console'
+    command: -c "echo \"$$CONSOLE_CONFIG_FILE\" > /tmp/config.yml; /app/console"
     environment:
       CONFIG_FILEPATH: /tmp/config.yml
       CONSOLE_CONFIG_FILE: |
         kafka:
-          brokers: ["redpanda-0:9092"]
+          brokers: ["redpanda:9092"]
           schemaRegistry:
             enabled: true
-            urls: ["http://redpanda-0:8081"]
+            urls: ["http://redpanda:8081"]
         redpanda:
           adminApi:
             enabled: true
-            urls: ["http://redpanda-0:9644"]
+            urls: ["http://redpanda:9644"]
+        connect:
+          enabled: true
+          clusters:
+            - name: local-connect-cluster
+              url: http://connect:8083
     ports:
       - 8080:8080
+    networks:
+      - redpanda_network
     depends_on:
-      - redpanda-0
+      - redpanda
+  connect:
+    image: docker.redpanda.com/redpandadata/connectors:latest
+    hostname: connect
+    container_name: connect
+    networks:
+      - redpanda_network
+    # platform: 'linux/amd64'
+    depends_on:
+      - redpanda
+    ports:
+      - "8083:8083"
+    environment:
+      CONNECT_CONFIGURATION: |
+          key.converter=org.apache.kafka.connect.converters.ByteArrayConverter
+          value.converter=org.apache.kafka.connect.converters.ByteArrayConverter
+          group.id=connectors-cluster
+          offset.storage.topic=_internal_connectors_offsets
+          config.storage.topic=_internal_connectors_configs
+          status.storage.topic=_internal_connectors_status
+          config.storage.replication.factor=-1
+          offset.storage.replication.factor=-1
+          status.storage.replication.factor=-1
+          offset.flush.interval.ms=1000
+          producer.linger.ms=50
+          producer.batch.size=131072
+      CONNECT_BOOTSTRAP_SERVERS: redpanda:9092
+      CONNECT_GC_LOG_ENABLED: "false"
+      CONNECT_HEAP_OPTS: -Xms512M -Xmx512M
+      CONNECT_LOG_LEVEL: info
   transactions-service:
     build:
       context: transactions-service/
+    environment:
+      KAFKA_URL: redpanda:9092      
     networks:
       - redpanda_network
     ports:
       - 8081:8081
     depends_on:
-      - redpanda-0
+      - redpanda
   accounts-service:
     build:
       context: accounts-service/
+    environment:
+      KAFKA_URL: redpanda:9092       
     networks:
       - redpanda_network
     ports:
       - 8082:8082
     depends_on:
-      - redpanda-0              
+      - redpanda
+  no-transactions-service:
+    build:
+      context: no-transactions-service/
+    environment:
+      KAFKA_URL: redpanda:9092      
+    networks:
+      - redpanda_network
+    ports:
+      - 8084:8084
+    depends_on:
+      - redpanda                   
