--- a/transactions-service/src/main/resources/application.yml
+++ b/transactions-service/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   application.name: transactions-service
   kafka:
-    bootstrap-servers: ${KAFKA_URL}
+    bootstrap-servers: localhost:19092
     consumer:
       key-deserializer: org.apache.kafka.common.serialization.LongDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
@@ -20,14 +20,6 @@ spring:
     exposed-header: "Authorization,Link,X-Total-Count"
     allow-credentils: true
     max-age: 1800
-  datasource:
-    url: jdbc:h2:mem:mydb
-    username: sa
-    password: password
-    driverClassName: org.h2.Driver
-  jpa:
-    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect 
-
 #sasl.jaas.config: org.apache.kafka.common.security.scram.ScramLoginModule required username=\"aHVtYmxlLXJhdC02ODM0JJfK7rXhMissPVIH8Fk0TkUQUmGWTxoTxhgvM_cZVek\" password=\"Sjb1tk4-hJ_A5xxr_jz8k-jKtnYpfPhC94Jd-J9krZ5-Dde5cNhXtDwtOpaKrDyT6Vy3Jw==\";
 logging:
   pattern.console: "%clr(%d{HH:mm:ss.SSS}){blue} %clr(---){faint} %clr([%15.15t]){yellow} %clr(:){red} %clr(%m){faint}%n"
